--- a/src/app/components/shared/card-post/card-post.component.html
+++ b/src/app/components/shared/card-post/card-post.component.html
@@ -7,8 +7,7 @@
             <ul>
                 <li (click)="editPost(post.publicationId)">Editar publicación</li>
                 <hr>
-                <li>Eliminar publicación</li>
-                <!-- Agrega más opciones según sea necesario -->
+                <li (click)="deletePost(post.publicationId)">Eliminar publicación</li>
             </ul>
         </div>
     </div>
