--- a/src/app/layouts/individual-post/individual-post.component.html
+++ b/src/app/layouts/individual-post/individual-post.component.html
@@ -1,6 +1,6 @@
 <app-button-back />
 
-<app-card-post [post]="post$ | async" />
+<app-card-post [post]="post$ | async" [loading]="(loading$ | async)" />
 
 <app-comments [comments]="(post$ | async)!.comments" />
 
