--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,6 +1,6 @@
 <section>
 
-    <div>{{weddingInfo.welcomeText}}</div>
+    <div>{{welcomeText}}</div>
 
     <button (click)="loginWithGoogle()" class="w-full px-4 py-2 rounded text-white bg-red-300">Continuar con
         google</button>
