--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -5,9 +5,11 @@
             <h3 class="font-bold">{{comment.userName}}</h3>
             <span class="text-slate-300">{{comment.comment}}</span>
         </div>
+        @if(userName === comment.userName){
         <div class="flex items-center justify-center gap-2 self-end">
             <i (click)="deleteComment(comment.idComment)" class="fa-solid fa-trash text-red-300"></i>
         </div>
+        }
     </div>
     }
 </section>
