--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,14 +1,16 @@
 <header
-    class="relative flex mb-4 py-4 px-2 items-center justify-between border-b border-slate-300 border-2 bg-cover bg-center w-full"
-    [style.background-image]="'url(' + imgBg + ')'" [ngClass]="{'nav-scroll' : scrollPosition > 100}">
+    class="relative flex mb-4 py-4 px-2 items-center justify-between border-b border-slate-300 border-2 bg-red-300 w-full"
+    [ngClass]="{'nav-scroll' : scrollPosition > 100}">
+
     @if(wedding){
-    <div>
-        <h1 class="text-3xl font-bold text-red-300">Casamiento</h1>
-        <h2 class="text-sm text-slate-400">{{ wedding.weddingName }}</h2>
+    <div class="text-center">
+        <h1 class="text-3xl font-bold text-white">Casamiento</h1>
+        <h2 class="text-sm text-white">{{ wedding.weddingName }}</h2>
     </div>
     }
 
     @if (userName) {
-    <span>Hola! {{userName}}</span>
+    <span class="text-white">Hola! {{userName}}</span>
     }
+
 </header>
