--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,7 +1,13 @@
-<section>
+<section class="flex flex-col items-center justify-around h-[500px] w-full px-2">
 
-    <div>{{welcomeText}}</div>
+    <div class="text-center text-slate-400 text-2xl">{{welcomeText}}.
+    </div>
 
-    <button (click)="loginWithGoogle()" class="w-full px-4 py-2 rounded text-white bg-red-300">Continuar con
-        google</button>
+
+    <div class="flex flex-col gap-2 items-center justify-center">
+        <p class="text-slate-400">Para continuar por favor ingresá con tu cuenta</p>
+        <button (click)="loginWithGoogle()" class="w-full px-4 py-2 rounded text-white bg-red-300"><i
+                class="fa-brands fa-google">{{" "}}</i> Continuar con
+            google</button>
+    </div>
 </section>
