--- a/src/app/components/shared/button-back/button-back.component.html
+++ b/src/app/components/shared/button-back/button-back.component.html
@@ -1,1 +1,1 @@
-<button class="ml-4 text-blue-300 text-sm" (click)="goBack()">Atras</button>
+<button class="text-blue-300 text-sm absolute top-[75px] left-[15px]" (click)="goBack()">Atras</button>
