--- a/src/app/layouts/post/form-post/form-post.component.html
+++ b/src/app/layouts/post/form-post/form-post.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="formPost" (submit)="onSubmit()"
-    class="flex flex-col items-center justify-center gap-4 w-[300px] m-auto">
+    class="flex flex-col items-center justify-center gap-2 w-[300px] m-auto mt-[35px]">
     <div (click)="selectImage()"
         class="border-2 border-dashed h-[300px] w-full cursor-pointer rounded flex flex-col items-center justify-center"
         [ngClass]="{ 'border-red-300': image }">
@@ -7,16 +7,16 @@
             accept="image/*" hidden>
 
         @if (image) {
-        <img src="{{ image }}" alt="Foto seleccionada de la galeria" class="h-[90%] w-[50%]">
+        <img src="{{ image }}" alt="Foto seleccionada de la galeria" class="w-[90%] aspect-square">
         } @else if (!image && this.post?.image){
-        <img src="{{ this.post?.image }}" alt="Foto seleccionada de la galeria" class="h-[90%] w-[50%]">
+        <img src="{{ this.post?.image }}" alt="Foto seleccionada de la galeria" class="w-[90%] aspect-square">
         }@else {
         <i class="fa-solid fa-camera"></i>
         <p>Selecciona una imagen</p>
         }
     </div>
     @if (image) {
-    <p class="text-red-300">Hacer click en la imagen para actualizarla</p>
+    <p class="text-red-300 text-[12px]">Hacer click en la imagen para actualizarla</p>
     }
     <textarea class="w-full h-[100px] border-2 border-slate-200 rounded p-2 focus:outline-none focus:border-red-300"
         formControlName="comment" name="comment" placeholder="Deja un comentario para los novios..."></textarea>
