--- a/src/app/components/shared/card-post/card-post.component.css
+++ b/src/app/components/shared/card-post/card-post.component.css
@@ -1,31 +1,18 @@
-.menu-options {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+/* Animaciones */
+
+.beat-heart {
+  transition: transform 0.2s ease-in-out;
+  animation: heartBeat 0.6s ease-in-out;
 }
 
-.menu-options ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.menu-options ul li {
-  padding: 10px;
-}
-
-.menu-options ul li a {
-  text-decoration: none;
-  color: #333;
-}
-
-.menu-toggle {
-  background: none;
-  border: none;
-  cursor: pointer;
-  position: relative;
+@keyframes heartBeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
