--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,16 +1,24 @@
 <header
-    class="relative flex mb-4 py-4 px-2 items-center justify-between border-b border-slate-300 border-2 bg-red-300 w-full"
-    [ngClass]="{'nav-scroll' : scrollPosition > 100}">
+    class="relative flex mb-4 py-4 px-2 items-center justify-between border-b border-slate-300 border-2 bg-red-300 w-full">
 
     @if(wedding){
     <div class="text-center">
-        <h1 class="text-3xl font-bold text-white">Casamiento</h1>
-        <h2 class="text-sm text-white">{{ wedding.weddingName }}</h2>
+        <h1 class="text-[1.3rem] text-white">{{ wedding.weddingName }}</h1>
     </div>
     }
 
     @if (userName) {
-    <span class="text-white">Hola! {{userName}}</span>
+    <div class="flex items-center justify-center gap-[10px] text-[12px]">
+        <span class="text-white">Hola! {{userName}}</span>
+        <button (click)="toggleOptionsMenu()" class="menu-toggle flex items-center justify-center">
+            <i class="fa-solid fa-caret-down text-white"></i>
+        </button>
+    </div>
+    <div class="menu-options" [ngClass]="{ 'flex': isOpenOptionsMenu, 'hidden': !isOpenOptionsMenu }">
+        <ul>
+            <li (click)="loguot()"><i class="fa-solid fa-arrow-right-from-bracket"></i> Cerrar Sesion</li>
+        </ul>
+    </div>
     }
 
 </header>
