--- a/src/app/layouts/post/form-post/form-post.component.html
+++ b/src/app/layouts/post/form-post/form-post.component.html
@@ -21,5 +21,6 @@
     <textarea class="w-full h-[100px] border-2 border-slate-200 rounded p-2 focus:outline-none focus:border-red-300"
         formControlName="comment" name="comment" placeholder="Deja un comentario para los novios..."></textarea>
     <button [disabled]="formPost.invalid" class="w-full px-4 py-2 rounded text-white"
-        [ngClass]="{ 'bg-slate-300': formPost.status === 'INVALID', 'bg-red-300': formPost.status === 'VALID' }">Publicar</button>
+        [ngClass]="{ 'bg-slate-300': formPost.status === 'INVALID', 'bg-red-300': formPost.status === 'VALID' }">Publicar
+    </button>
 </form>
