--- a/src/app/components/new-comment/new-comment.component.html
+++ b/src/app/components/new-comment/new-comment.component.html
@@ -1,5 +1,6 @@
 <div class="flex gap-2 py-2 px-4 fixed bottom-0 w-full bg-red-300">
     <input type="text" [(ngModel)]="newComment" placeholder="Escribe un comentario"
-        class="w-full rounded border-2 border-slate-300 focus:border-red-300">
+        class="w-full rounded border-2 border-slate-300 focus:border-red-300" id="inputComment"
+        (keyup.enter)="addComment()">
     <button (click)="addComment()" class="w-auto text-white"><i class="fa-regular fa-paper-plane"></i></button>
 </div>
